--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -5,7 +5,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorWhite">
+                android:background="#efefef">
 
   <ScrollView
     android:layout_width="match_parent"
@@ -21,112 +21,38 @@
         android:id="@+id/ll_fl_container"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="43dp"
         android:background="#efefef">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:layout_marginTop="18dp"
+          android:text="사용자 설정"
+          android:textSize="14sp"
+          android:textColor="#6d6d6d"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
       </LinearLayout>
 
-      <FrameLayout
-        android:id="@+id/fl_setting_notice"
-        android:layout_below="@id/ll_fl_container"
-        android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:layout_marginBottom="5dp">
-
-        <TextView
-          android:layout_marginLeft="16dp"
-          android:text="공지사항"
-          android:textColor="#333333"
-          android:textSize="16sp"
-          android:layout_gravity="center_vertical|left"
-          android:layout_centerVertical="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/tv_setting_notice"
-          android:layout_weight="0.6"/>
-
-        <ImageView
-          android:layout_marginRight="16dp"
-          android:layout_width="12.5dp"
-          android:layout_height="21dp"
-          android:layout_gravity="center_vertical|right"
-          android:src="@drawable/back_chevron_copy"
-          android:id="@+id/iv_setting_notice"/>
-
-        <Button
-          android:background="@null"
-          android:onClick="onClick"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:id="@+id/btn_setting_notice"/>
-      </FrameLayout>
-
       <LinearLayout
-        android:id="@+id/ll_bar"
-        android:layout_below="@+id/fl_setting_notice"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
-
-      <FrameLayout
-        android:id="@+id/fl_setting_version"
-        android:layout_below="@id/ll_bar"
-        android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
-
-        <TextView
-          android:layout_marginLeft="16dp"
-          android:text="버전정보"
-          android:textColor="#333333"
-          android:textSize="16sp"
-          android:layout_gravity="center_vertical|left"
-          android:layout_centerVertical="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/tv_setting_version"/>
-
-        <TextView
-          android:layout_marginRight="16dp"
-          android:text="1.0"
-          android:textColor="#333333"
-          android:textSize="16sp"
-          android:layout_toLeftOf="@+id/iv_setting_version"
-          android:layout_gravity="center_vertical|right"
-          android:layout_centerVertical="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/tv_setting_versionNum"/>
-
-      </FrameLayout>
-
-      <LinearLayout
-        android:id="@+id/ll_fl_container2"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#efefef"
-        android:layout_below="@+id/fl_setting_version"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_user"
         android:layout_below="@+id/ll_fl_container2"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="계정 설정"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
@@ -154,28 +80,22 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar5"
-        android:layout_below="@+id/fl_setting_user"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
+      <!-- 관심사 설정 -->
       <FrameLayout
         android:id="@+id/fl_setting_favorite"
-        android:layout_below="@+id/ll_bar5"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="관심사 설정"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -203,28 +123,22 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar3"
-        android:layout_below="@+id/fl_setting_user"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_alarm"
         android:layout_below="@+id/ll_bar3"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
-          android:text="알람 시간 제한 설정"
-          android:textSize="16sp"
+          android:text="알람시간 제한 설정"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -252,28 +166,22 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar4"
-        android:layout_below="@+id/fl_setting_alarm"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_block"
         android:layout_below="@+id/ll_bar4"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="수신 거부 관리"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
@@ -301,26 +209,88 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_fl_container3"
-        android:layout_below="@+id/fl_setting_block"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
+
+      <LinearLayout
+        android:id="@+id/ll_fl_container"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="43dp"
         android:background="#efefef">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:layout_marginTop="18dp"
+          android:text="기"
+          android:textSize="14sp"
+          android:textColor="#6d6d6d"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
+
+      <FrameLayout
+        android:background="@color/colorWhite"
+        android:id="@+id/fl_setting_notice"
+        android:layout_below="@id/ll_fl_container"
+        android:layout_width="match_parent"
+        android:layout_height="53dp">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:text="공지사항"
+          android:textSize="15sp"
+          android:textColor="#333333"
+          android:layout_gravity="center_vertical|left"
+          android:layout_centerVertical="true"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/tv_setting_notice"
+          android:layout_weight="0.6"/>
+
+        <ImageView
+          android:layout_marginRight="16dp"
+          android:layout_width="12.5dp"
+          android:layout_height="21dp"
+          android:layout_gravity="center_vertical|right"
+          android:src="@drawable/back_chevron_copy"
+          android:id="@+id/iv_setting_notice"/>
+
+        <Button
+          android:background="@null"
+          android:onClick="onClick"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/btn_setting_notice"/>
+      </FrameLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_customer"
         android:layout_below="@+id/ll_fl_container3"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
-        <TextView
+        android:background="@color/colorWhite">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="고객센터"
           android:textColor="#333333"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
           android:layout_width="wrap_content"
@@ -347,12 +317,64 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_fl_container_"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#efefef">
+        android:layout_height="1dp"
+        android:background="#dadada"/>
+
+      <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/fl_setting_version"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:background="@color/colorWhite">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:text="버전정보"
+          android:textColor="#333333"
+          android:textSize="15sp"
+          android:layout_gravity="center_vertical|left"
+          android:layout_centerVertical="true"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/tv_setting_version"/>
+
+        <LinearLayout
+          android:layout_weight="1"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"/>
+
+        <com.puzi.puzi.ui.customview.NotoButton
+          android:gravity="center"
+          android:layout_gravity="center_vertical"
+          app:fontWeight="demilight"
+          android:layout_marginRight="18dp"
+          android:textSize="12dp"
+          android:textColor="@color/colorPuzi"
+          android:text="업데이트"
+          android:background="@drawable/button_favorite_on"
+          android:layout_width="55dp"
+          android:layout_height="22dp"/>
+
+        <TextView
+          android:layout_marginRight="16dp"
+          android:text="v1.0.0"
+          android:textColor="#333333"
+          android:textSize="16sp"
+          android:layout_toLeftOf="@+id/iv_setting_version"
+          android:layout_gravity="center_vertical|right"
+          android:layout_centerVertical="true"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/tv_setting_versionNum"/>
+
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
 
     </LinearLayout>
 
