--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,13 @@
     android:layout_height="54dp">
 
     <com.puzi.puzi.ui.customview.NotoTextView
-      app:fontWeight="demilight"
+      android:gravity="center"
+      app:fontWeight="medium"
       android:text="설정"
       android:textColor="#333333"
       android:textSize="20sp"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"/>
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
   </LinearLayout>
 
