--- a/app/src/main/res/layout/fragment_setting_favorites.xml
+++ b/app/src/main/res/layout/fragment_setting_favorites.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -19,7 +19,8 @@
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp">
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:gravity="left"
@@ -27,102 +28,157 @@
         android:textColor="@color/colorBlack"
         android:text="관심분야"/>
 
-      <GridLayout
+      <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="295dp"
+        android:layout_height="wrap_content"
         android:id="@+id/gl_favorites"
-        android:layout_gravity="center"
-        android:columnCount="2"
         android:layout_marginTop="8dp">
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_beauty"
-          android:text="뷰티"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_marginRight="8dp"
+        <LinearLayout
           android:layout_marginBottom="15dp"
-          android:layout_width="140dp"
-          android:layout_height="60dp"/>
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_shopping"
-          android:text="쇼핑"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_marginLeft="8dp"
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_beauty"
+            android:text="뷰티"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
+
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_shopping"
+            android:text="쇼핑"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
           android:layout_marginBottom="15dp"
-          android:layout_width="140dp"
-          android:layout_height="60dp"/>
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_game"
-          android:text="게임"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_marginRight="8dp"
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_game"
+            android:text="게임"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
+
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_eat"
+            android:text="외식"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
           android:layout_marginBottom="15dp"
-          android:layout_width="140dp"
-          android:layout_height="60dp"/>
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_eat"
-          android:text="외식"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_marginLeft="8dp"
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_tour"
+            android:text="여행\n(항공,호텔)"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
+
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_finance"
+            android:text="금융\n(보험,제테크)"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
           android:layout_marginBottom="15dp"
-          android:layout_width="140dp"
-          android:layout_height="60dp"/>
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_tour"
-          android:text="여행\n(항공,호텔)"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_marginRight="8dp"
-          android:layout_marginBottom="15dp"
-          android:layout_width="140dp"
-          android:layout_height="60dp"/>
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
+            android:background="@drawable/button_favorite_off"
+            android:id="@+id/btn_setting_culture"
+            android:text="문화\n(콘서트,공연)"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_finance"
-          android:text="금융(보험,제테크)"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_marginLeft="8dp"
-          android:layout_width="140dp"
-          android:layout_height="60dp"/>
+          <com.puzi.puzi.ui.customview.NotoButton
+            android:text="문화\n(콘서트,공연)"
+            app:fontWeight="regular"
+            android:visibility="invisible"
+            android:background="@drawable/button_favorite_off"
+            android:textSize="16sp"
+            android:textColor="#dadada"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="54dp"/>
 
-        <Button
-          android:background="@drawable/button_favorite_off"
-          android:id="@+id/btn_setting_culture"
-          android:text="문화\n(콘서트,공연)"
-          android:textSize="16sp"
-          android:textColor="@color/colorTextGray"
-          android:layout_width="140dp"
-          android:layout_height="60dp"
-          android:layout_marginBottom="15dp"/>
+        </LinearLayout>
 
-      </GridLayout>
+      </LinearLayout>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="13dp"
         android:textSize="12sp"
+        android:textColor="#333333"
         android:text="3개 이상 선택해주세요"
         android:gravity="left" android:id="@+id/textView5"/>
 
     </LinearLayout>
 
-    <Button
+    <com.puzi.puzi.ui.customview.NotoButton
+      app:fontWeight="medium"
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp"
       android:layout_marginTop="40dp"
@@ -130,10 +186,10 @@
       android:layout_height="54dp"
       android:layout_marginBottom="20dp"
       android:id="@+id/btn_setting_user_modify"
-      android:textSize="15sp"
+      android:textSize="16sp"
       android:text="수정하기"
       android:textColor="@color/colorWhite"
-      android:background="@drawable/button_search"/>
+      android:background="@drawable/button_puzi"/>
 
   </LinearLayout>
 
