--- a/app/src/main/res/layout/fragment_setting_user.xml
+++ b/app/src/main/res/layout/fragment_setting_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -18,7 +18,8 @@
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp">
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_marginBottom="8dp"
@@ -27,13 +28,14 @@
         android:text="이메일"
         android:gravity="left" />
 
-      <EditText
+      <com.puzi.puzi.ui.customview.NotoEditText
+        app:fontWeight="regular"
         android:background="@drawable/edittext"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:textSize="15sp"
+        android:layout_height="54dp"
+        android:textSize="16sp"
         android:id="@+id/edt_setting_email"
-        android:textColorHint="#6D6D6D"
+        android:textColor="#6D6D6D"
         android:hint="이메일 주소를 입력하세요."
         android:ems="15"
         android:maxLines="1"
@@ -52,7 +54,8 @@
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp">
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
@@ -61,7 +64,8 @@
         android:text="비밀번호"
         android:gravity="left" />
 
-      <EditText
+      <com.puzi.puzi.ui.customview.NotoEditText
+        app:fontWeight="regular"
         android:background="@drawable/edittext"
         android:layout_width="match_parent"
         android:layout_height="64dp"
@@ -76,7 +80,8 @@
         android:ems="15"
         android:maxLines="1"/>
 
-      <EditText
+      <com.puzi.puzi.ui.customview.NotoEditText
+        app:fontWeight="regular"
         android:background="@drawable/edittext"
         android:layout_width="match_parent"
         android:layout_height="64dp"
@@ -92,18 +97,20 @@
         android:ems="15"
         android:maxLines="1"/>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="regular"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
         android:textSize="12sp"
         android:textColor="#333333"
-        android:text="8-15자 이내,\n숫자, 영문 대소문자, 특수문자 중 3개 이상 조합해주세요."
+        android:text="8-15자 이내,\n숫자, 영문 대소문자, 특수문자 중 2개 이상 조합해주세요."
         android:gravity="left" />
 
     </LinearLayout>
 
-    <Button
+    <com.puzi.puzi.ui.customview.NotoButton
+      app:fontWeight="medium"
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp"
       android:layout_marginTop="40dp"
@@ -111,10 +118,10 @@
       android:layout_height="54dp"
       android:layout_marginBottom="20dp"
       android:id="@+id/btn_setting_user_modify"
-      android:textSize="15sp"
+      android:textSize="16sp"
       android:text="수정하기"
       android:textColor="@color/colorWhite"
-      android:background="@drawable/button_search"/>
+      android:background="@drawable/button_puzi"/>
 
   </LinearLayout>
 
