--- a/app/src/main/res/layout/fragment_advertisement_item_new.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item_new.xml
@@ -57,7 +57,12 @@
                 app:sriv_border_color="#979797"
                 app:sriv_border_width="1dp"
                 android:src="#f0f0f0"
-                android:layout_gravity="center_vertical"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="6dp"
+                android:layout_marginStart="6dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:scaleType="centerCrop"
