--- a/app/src/main/res/layout/fragment_advertisement_item_saved.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item_saved.xml
@@ -23,6 +23,12 @@
             app:sriv_left_top_corner_radius="8dp"
             app:sriv_right_bottom_corner_radius="8dp"
             app:sriv_left_bottom_corner_radius="8dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="6dp"
+            android:layout_marginStart="6dp"
             app:sriv_oval="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
